force-app/main/default/objects/ParcelLocker__c.object
<CustomObject>
    <description>This object represent Parcel Locker</description>
    <fields>
        <fullName>Location__c</fullName>
        <description>This field represent geolocation of Parcel Locker</description>
        <label>Location</label>
        <required>true</required>
        <scale>5</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>UniqueNumber__c</fullName>
        <description>This is a unique number that identify Parcel Locker</description>
        <externalId>true</externalId>
        <label>Unique Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Parcel Locker</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Parcel Locker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parcel Lockers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>