force-app/main/default/objects/ParcelLocker__c/fields/Is_Integrated__c.field-meta.xml
<CustomField>
    <fullName>Is_Integrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Integrated</label>
    <type>Checkbox</type>
</CustomField>