force-app/main/default/objects/ParcelLocker__c/fields/Occupied_Cells__c.field-meta.xml
<CustomField>
    <fullName>Occupied_Cells__c</fullName>
    <label>Occupied Cells</label>
    <summaryFilterItems>
        <field>Cell__c.Availability__c</field>
        <operation>equals</operation>
        <value>Full</value>
    </summaryFilterItems>
    <summaryForeignKey>Cell__c.ParcelLocker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>