force-app/main/default/objects/ParcelLocker__c/fields/Percentage_of_Volume_Occupied__c.field-meta.xml
<CustomField>
    <fullName>Percentage_of_Volume_Occupied__c</fullName>
    <formula>(  Total_Occupied_Volume__c  /  Total_Volume__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage of Volume Occupied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>