force-app/main/default/objects/ParcelLocker__c/fields/Total_Occupied_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Occupied_Volume__c</fullName>
    <label>Total Occupied Volume</label>
    <summarizedField>Cell__c.Volume__c</summarizedField>
    <summaryFilterItems>
        <field>Cell__c.Availability__c</field>
        <operation>equals</operation>
        <value>Full</value>
    </summaryFilterItems>
    <summaryForeignKey>Cell__c.ParcelLocker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>