force-app/main/default/objects/ParcelLocker__c/fields/Total_Volume__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume__c</fullName>
    <label>Total Volume</label>
    <summarizedField>Cell__c.Volume__c</summarizedField>
    <summaryForeignKey>Cell__c.ParcelLocker__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>