force-app/main/default/objects/ParcelLocker__c/validationRules/Digits_no_leading_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Digits_no_leading_0</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK( Name )),
    OR(
       NOT(ISNUMBER( Name )),
       LEFT( Name, 1) = &quot;0&quot;
    )
)</errorConditionFormula>
    <errorMessage>The parcel locker name must be only digits and no leading 0.</errorMessage>
</ValidationRule>