force-app/main/default/objects/ParcelLocker__c/listViews/All_Parcel_Lockers.listView-meta.xml
<ListView>
    <fullName>All_Parcel_Lockers</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Parcel Lockers</label>
</ListView>